applying header to logged in state and fixing  wrapping

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,6 +46,10 @@ code {
   text-decoration: none;
   justify-content: space-around;
   padding-right: 20px;
+  width: auto;
+  max-width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .nav-bar:hover {
